fix width on mobile

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -102,7 +102,7 @@
   top: 0;
   right: 0;
   transform: translateX(100%);
-  width: 254px;
+  width: 100%;
   height: 100%;
   padding: 0;
   padding-top: 60px;
